Finish queries so that they do not block the db layout update process

https://stackoverflow.com/questions/17057420/qt-sqlite-unable-to-fetch-row-database-locked
gave me the necessary hint to find the cause.

BUG: 410091
FIXED-IN: 5.0.6